--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "discordID": "311057290562371586",
     "github": "replugged-org"
   },
-  "version": "1.0.0",
+  "version": "Legacy",
   "updater": {
     "type": "github",
     "id": "SiriusBYT/flashcord-legacy"
