--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Flashcord Legacy",
-  "version": "Legacy",
+  "version": "LegacyLocal",
   "description": "BUT CAN YOUR PC RUN FLASHCORD LEGACY?",
   "engines": {
     "node": ">=18.0.0",
