--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Flashcord Legacy",
-  "version": "LegacyLocal",
-  "description": "BUT CAN YOUR PC RUN FLASHCORD LEGACY?",
+  "version": "Legacy_Final",
+  "description": "The first version of Flashcord. A true disaster. The question now is... BUT CAN YOUR PC RUN FLASHCORD LEGACY?",
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
@@ -15,7 +15,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@parcel/config-default": "^2.8.3",
     "@parcel/core": "^2.8.3",
