--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "discordID": "311057290562371586",
     "github": "SiriusBYT"
   },
-  "version": "Legacy-Final",
+  "version": "LegacyFinal",
   "updater": {
     "type": "github",
     "id": "SiriusBYT/flashcord-legacy"
